# Risk-Manager-Work

./: .gitignore  CMakeLists.txt  README.md  active_passive.py  app.py  extract_splits.py  inspect2.py  inspect_data.py  inspect_data3.py  inspect_data4.py  launch.bat  main.cpp  requirements.txt
news_monitor/: app.py  config.yaml  requirements.txt  run.py  test_ingest.py
news_monitor/src/: __init__.py  bloomberg.py  db.py  news_bing.py  news_gdelt.py  risk_mapper.py  scheduler.py  tagger.py  taxonomy.py  taxonomy.yaml
theme_engine/: __init__.py  __main__.py  bloomberg_loader.py  config.py  dashboard.py  factor_model.py  indicators.py  ingestion.py  models.py  news_sifter.py  portfolio.py  requirements.txt  scenario.py  synthetic_data.py  utils.py  vfmc_portfolio.py  web_dashboard.py
theme_engine/data/config/: bloomberg_tickers.yaml  exposure_matrix.yaml  parameters.yaml  transmission_matrix.yaml
theme_engine/tests/: test_factor_model.py  test_indicators.py  test_ingestion.py  test_portfolio.py  test_scenario.py
